Feat/alert (#74)
* Development (#67)

* add update station + log errors

* :art: logError + return res function

* change where stationId can be accessed: from params to body

* remove .en_file from mongo container

* :art: add trycatch in all methods

* feat: create database connection test


* add data modeling for alert

* create migration and update alert data model

* add main CRUD for alerts and final data model

* create alert flux and status in parameter table
