# src/app/entities/Parameter.ts
@@ -1,4 +1,5 @@
-import { Entity, PrimaryGeneratedColumn, Column, ManyToOne, OneToMany, JoinColumn, BeforeInsert } from 'typeorm';
+import { Entity, PrimaryGeneratedColumn, Column, ManyToOne, OneToMany, JoinColumn, BeforeInsert, OneToOne } from 'typeorm';
+import { Alert } from './Alert';
 import { Measurement } from './Measurement';
 import { ParameterType } from './ParameterType';
 import { Station } from './Station';
@@ -25,8 +26,14 @@ export class Parameter {
   @JoinColumn()
   parameterType: ParameterType;
 
+  @Column()
+  status: string;
 
   @OneToMany(() => Measurement, (measurement) => measurement.parameter)
   @JoinColumn()
   measurements: Measurement[];
+
+  @OneToOne(() => Alert, (alert) => alert.parameter)
+  alert: Alert
+
 }
